DigicielFull/force-app/main/default/objects/Account/fields/Fiscal_Year_Beginning_Date__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Beginning_Date__c</fullName>
    <label>Fiscal Year Beginning Date</label>
    <type>Date</type>
</CustomField>