DigicielFull/force-app/main/default/objects/Account/fields/FORMULA_Fax__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Fax__c</fullName>
    <formula>Primary_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Fax</label>
    <type>Text</type>
</CustomField>