DigicielFull/force-app/main/default/objects/Account/fields/FORMULA_Telephone__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Telephone__c</fullName>
    <formula>Primary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Telephone</label>
    <type>Text</type>
</CustomField>