DigicielFull/force-app/main/default/objects/Account/fields/Global_Account__c.field-meta.xml
<CustomField>
    <fullName>Global_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Account</label>
    <type>Checkbox</type>
</CustomField>