DigicielFull/force-app/main/default/objects/Account/fields/GPS__c.field-meta.xml
<CustomField>
    <fullName>GPS__c</fullName>
    <label>GPS Cordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>