DigicielFull/force-app/main/default/objects/Account/fields/GPS_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Longitude__c</fullName>
    <label>Dummy GPS Longitude</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>