DigicielFull/force-app/main/default/objects/Account/fields/GST_Number_del__c.field-meta.xml
<CustomField>
    <fullName>GST_Number_del__c</fullName>
    <label>GST Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>