DigicielFull/force-app/main/default/objects/Account/fields/HeadquartersAddress__c.field-meta.xml
<CustomField>
    <fullName>HeadquartersAddress__c</fullName>
    <label>Headquarters address</label>
    <type>Address</type>
</CustomField>