DigicielFull/force-app/main/default/objects/Account/fields/ICT_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ICT_Contract_End_Date__c</fullName>
    <label>ICT Contract End Date</label>
    <type>Date</type>
</CustomField>