DigicielFull/force-app/main/default/objects/Account/fields/Installation_Connection_Fee__c.field-meta.xml
<CustomField>
    <fullName>Installation_Connection_Fee__c</fullName>
    <label>Installation/Connection Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>