DigicielFull/force-app/main/default/objects/Account/fields/IT_Infrastructure_and_Applications__c.field-meta.xml
<CustomField>
    <fullName>IT_Infrastructure_and_Applications__c</fullName>
    <label>IT Infrastructure and Applications</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>