DigicielFull/force-app/main/default/objects/Account/fields/LastModifiedBy_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedBy_MIGRATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LastModifiedBy_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accounts (LastModifiedBy_MIGRATION)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>