DigicielFull/force-app/main/default/objects/Account/fields/LastModifiedDate_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate_MIGRATION__c</fullName>
    <label>LastModifiedDate_MIGRATION</label>
    <type>DateTime</type>
</CustomField>