DigicielFull/force-app/main/default/objects/Account/fields/Lead_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_Name__c</fullName>
    <label>Lead Record Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>GSM</fullName>
            </value>
            <value>
                <fullName>MAS</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>