DigicielFull/force-app/main/default/objects/Account/fields/LegalCity__c.field-meta.xml
<CustomField>
    <fullName>LegalCity__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>