DigicielFull/force-app/main/default/objects/Account/fields/Loop_Country__c.field-meta.xml
<CustomField>
    <fullName>Loop_Country__c</fullName>
    <label>Trend Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jamaica</fullName>
            </value>
            <value>
                <fullName>Cayman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>