DigicielFull/force-app/main/default/objects/Account/fields/M2M_Services_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>M2M_Services_Contract_End_Date__c</fullName>
    <label>M2M Services Contract End Date</label>
    <type>Date</type>
</CustomField>