DigicielFull/force-app/main/default/objects/Account/fields/Main_Digital_TV_Packages__c.field-meta.xml
<CustomField>
    <fullName>Main_Digital_TV_Packages__c</fullName>
    <label>Main Digital TV Packages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BTV - Basic TV</fullName>
            </value>
            <value>
                <fullName>Extended TV</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>