DigicielFull/force-app/main/default/objects/Account/fields/Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Map_Link__c</fullName>
    <formula>IF( OR( GPS__Latitude__s  = 0 , GPS__Longitude__s  = 0 ) , &quot;Missing Coordinates&quot;, HYPERLINK(&quot;https://www.google.com/maps/search/&quot;&amp; TEXT(GPS__Latitude__s )&amp;&quot;+&quot;&amp; TEXT(GPS__Longitude__s) &amp;&quot;/@&quot;&amp; TEXT(GPS__Latitude__s  )&amp;&quot;,&quot;&amp; TEXT(GPS__Longitude__s )&amp;&quot;,350m/data=!3m1!1e3!&quot;, &quot;View Coordinates in Google Map&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Link</label>
    <type>Text</type>
</CustomField>