DigicielFull/force-app/main/default/objects/Account/fields/Mobile_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Contract_End_Date__c</fullName>
    <label>Mobile Contract End Date</label>
    <type>Date</type>
</CustomField>