DigicielFull/force-app/main/default/objects/Account/fields/Mobile_No_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_Assigned__c</fullName>
    <label>Mobile No. Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>