DigicielFull/force-app/main/default/objects/Account/fields/Monthly_visits__c.field-meta.xml
<CustomField>
    <fullName>Monthly_visits__c</fullName>
    <label>Monthly visits</label>
    <type>Date</type>
</CustomField>