DigicielFull/force-app/main/default/objects/Account/fields/MRC_Remaining_Debt__c.field-meta.xml
<CustomField>
    <fullName>MRC_Remaining_Debt__c</fullName>
    <formula>MRC_Bad_Debt__c  -  MRC_Payments_Made__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows how much debt the customer still has with Digicel</inlineHelpText>
    <label>MRC Remaining Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>