DigicielFull/force-app/main/default/objects/Account/fields/Net_AOP_of_Won_Opps__c.field-meta.xml
<CustomField>
    <fullName>Net_AOP_of_Won_Opps__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>Net AOP of Won Opps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>