DigicielFull/force-app/main/default/objects/Account/fields/New_Business_Requirement__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Requirement__c</fullName>
    <label>New Business Requirement</label>
    <summarizedField>Backlog__c.Target__c</summarizedField>
    <summaryFilterItems>
        <field>Backlog__c.Current_Month__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Backlog__c.Account_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>