DigicielFull/force-app/main/default/objects/Account/fields/NewClientFirstThreeMonths__c.field-meta.xml
<CustomField>
    <fullName>NewClientFirstThreeMonths__c</fullName>
    <formula>IF( TODAY() -  FirstDateOpportunityWon__c &gt; 90, false, true)</formula>
    <label>New client : first three months</label>
    <type>Checkbox</type>
</CustomField>