DigicielFull/force-app/main/default/objects/Account/fields/No_Branches__c.field-meta.xml
<CustomField>
    <fullName>No_Branches__c</fullName>
    <label>No Branches</label>
    <type>TextArea</type>
</CustomField>