DigicielFull/force-app/main/default/objects/Account/fields/No_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employees__c</fullName>
    <description>The values in this picklist are the agreed upon list of employee groupings across all of Digicel. DO NOT ADD ANY NEW VALUES TO THIS FIELD AND DO NOT AMEND THIS FIELD WITHOUT SPEAKING WITH TONY KENNY</description>
    <label>No. of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 5 employees</fullName>
            </value>
            <value>
                <fullName>6 - 10 employees</fullName>
            </value>
            <value>
                <fullName>11 - 20 employees</fullName>
            </value>
            <value>
                <fullName>21 - 50 employees</fullName>
            </value>
            <value>
                <fullName>51 - 100 employees</fullName>
            </value>
            <value>
                <fullName>101 - 200 employees</fullName>
            </value>
            <value>
                <fullName>201 - 500 employees</fullName>
            </value>
            <value>
                <fullName>501 - 750 employees</fullName>
            </value>
            <value>
                <fullName>751 - 1000 employees</fullName>
            </value>
            <value>
                <fullName>1001 - 2000 employees</fullName>
            </value>
            <value>
                <fullName>More than 2000 employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>