DigicielFull/force-app/main/default/objects/Account/fields/No_of_Mobile_Phone_Users__c.field-meta.xml
<CustomField>
    <fullName>No_of_Mobile_Phone_Users__c</fullName>
    <label>No. of Mobile Phone Users</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>