DigicielFull/force-app/main/default/objects/Account/fields/of_BAN__c.field-meta.xml
<CustomField>
    <fullName>of_BAN__c</fullName>
    <label># of BAN Records</label>
    <summaryForeignKey>BAN__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>