DigicielFull/force-app/main/default/objects/Account/fields/ofOpenOpps__c.field-meta.xml
<CustomField>
    <fullName>ofOpenOpps__c</fullName>
    <label># of Open Opps</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Digicel Business Opportunity, IDOM IO ICT, IDOM FWI ICT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Go Live!, Closed Won, Billed, Closed Lost, Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>