DigicielFull/force-app/main/default/objects/Account/fields/OTC_Bad_Debt__c.field-meta.xml
<CustomField>
    <fullName>OTC_Bad_Debt__c</fullName>
    <label>OTC Bad Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>