DigicielFull/force-app/main/default/objects/Account/fields/OTC_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>OTC_Payments_Made__c</fullName>
    <label>OTC Payments Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>