DigicielFull/force-app/main/default/objects/Account/fields/OTC_Remaining_Debt__c.field-meta.xml
<CustomField>
    <fullName>OTC_Remaining_Debt__c</fullName>
    <formula>OTC_Bad_Debt__c  -  OTC_Payments_Made__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTC Remaining Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>