DigicielFull/force-app/main/default/objects/Account/fields/Parent_Ban__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ban__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Ban</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Parent Ban)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>