DigicielFull/force-app/main/default/objects/Account/fields/Parent_Market_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Market_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Market Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Accounts</relationshipLabel>
    <relationshipName>Market_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>