DigicielFull/force-app/main/default/objects/Account/fields/Parish__c.field-meta.xml
<CustomField>
    <fullName>Parish__c</fullName>
    <label>Parish / Region / Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Billing_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ahuachapán</fullName>
            </value>
            <value>
                <fullName>Amberguis Cay</fullName>
            </value>
            <value>
                <fullName>Anegada</fullName>
            </value>
            <value>
                <fullName>Anse la Raye</fullName>
            </value>
            <value>
                <fullName>Apatou</fullName>
            </value>
            <value>
                <fullName>Arima</fullName>
            </value>
            <value>
                <fullName>Artibonite</fullName>
            </value>
            <value>
                <fullName>Awala-Yalimapo</fullName>
            </value>
            <value>
                <fullName>Baie-Mahault</fullName>
            </value>
            <value>
                <fullName>Banda Abao</fullName>
            </value>
            <value>
                <fullName>Banda Ariba</fullName>
            </value>
            <value>
                <fullName>Barbuda</fullName>
            </value>
            <value>
                <fullName>Barima - Waini</fullName>
            </value>
            <value>
                <fullName>Basseterre</fullName>
            </value>
            <value>
                <fullName>Basse-Terre</fullName>
            </value>
            <value>
                <fullName>Brokopondo</fullName>
            </value>
            <value>
                <fullName>Brown Hill</fullName>
            </value>
            <value>
                <fullName>Cabañas</fullName>
            </value>
            <value>
                <fullName>Camopi</fullName>
            </value>
            <value>
                <fullName>Canaries</fullName>
            </value>
            <value>
                <fullName>Capesterre</fullName>
            </value>
            <value>
                <fullName>Castries</fullName>
            </value>
            <value>
                <fullName>Cayenne</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Centre</fullName>
            </value>
            <value>
                <fullName>Chaguanas</fullName>
            </value>
            <value>
                <fullName>Chalatenango</fullName>
            </value>
            <value>
                <fullName>Charlestown</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Chiriquí</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>