DigicielFull/force-app/main/default/objects/Account/fields/PaymentOptions__c.field-meta.xml
<CustomField>
    <fullName>PaymentOptions__c</fullName>
    <label>Payment options</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prélèvement automatique</fullName>
            </value>
            <value>
                <fullName>Virement</fullName>
            </value>
            <value>
                <fullName>Mandat administratif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>