DigicielFull/force-app/main/default/objects/Account/fields/Peak_Campaigns_Period_Finance__c.field-meta.xml
<CustomField>
    <fullName>Peak_Campaigns_Period_Finance__c</fullName>
    <label>Peak Campaigns Period Finance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>