DigicielFull/force-app/main/default/objects/Account/fields/PNG_CountryOfIncorporation__c.field-meta.xml
<CustomField>
    <fullName>PNG_CountryOfIncorporation__c</fullName>
    <label>Country of Incorporation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>