DigicielFull/force-app/main/default/objects/Account/fields/PNG_GPSCoordinates__c.field-meta.xml
<CustomField>
    <fullName>PNG_GPSCoordinates__c</fullName>
    <label>GPS Co-ordinates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>