DigicielFull/force-app/main/default/objects/Account/fields/PNG_Old_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>PNG_Old_Account_Owner__c</fullName>
    <label>PNG Old Account Owner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>