DigicielFull/force-app/main/default/objects/Account/fields/PNG_RedkneeBanId__c.field-meta.xml
<CustomField>
    <fullName>PNG_RedkneeBanId__c</fullName>
    <externalId>true</externalId>
    <label>Redknee BAN ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>