DigicielFull/force-app/main/default/objects/Account/fields/PNG_RegisteredOfficeAddress__c.field-meta.xml
<CustomField>
    <fullName>PNG_RegisteredOfficeAddress__c</fullName>
    <label>Registered Office Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>