DigicielFull/force-app/main/default/objects/Account/fields/PNG_TarkaId__c.field-meta.xml
<CustomField>
    <fullName>PNG_TarkaId__c</fullName>
    <externalId>true</externalId>
    <label>Tarka Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>