DigicielFull/force-app/main/default/objects/Account/fields/Previous_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract_Value__c</fullName>
    <description>This field is a summary of all current contract values for Mobile Opportunities</description>
    <label>Previous Contract Value</label>
    <length>18</length>
    <type>Text</type>
</CustomField>