DigicielFull/force-app/main/default/objects/Account/fields/Primary_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_ID_Number__c</fullName>
    <label>Primary ID Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>