DigicielFull/force-app/main/default/objects/Account/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <label>Publisher</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Digicel Sports Max</fullName>
            </value>
            <value>
                <fullName>Loop News</fullName>
            </value>
            <value>
                <fullName>Loop Trade</fullName>
            </value>
            <value>
                <fullName>Managed Platform / Silverstone</fullName>
            </value>
            <value>
                <fullName>Mobile Advertising</fullName>
            </value>
            <value>
                <fullName>Shazam</fullName>
            </value>
            <value>
                <fullName>Trend Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>