DigicielFull/force-app/main/default/objects/Account/fields/Publisher_Sections__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Sections__c</fullName>
    <label>Publisher Sections</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loop_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Jamaica News</fullName>
            </value>
            <value>
                <fullName>Cayman News</fullName>
            </value>
            <value>
                <fullName>Global News</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Our Endz</fullName>
            </value>
            <value>
                <fullName>Loop Lens</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>