DigicielFull/force-app/main/default/objects/Account/fields/R__c.field-meta.xml
<CustomField>
    <fullName>R__c</fullName>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>