DigicielFull/force-app/main/default/objects/Account/fields/ReccurringPipelineValue__c.field-meta.xml
<CustomField>
    <fullName>ReccurringPipelineValue__c</fullName>
    <label>Reccurring Pipeline Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>