DigicielFull/force-app/main/default/objects/Account/fields/Registration_Certificate_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_Certificate_No__c</fullName>
    <label>Registration/Certificate No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>