DigicielFull/force-app/main/default/objects/Account/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <externalId>true</externalId>
    <label>Registration #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>