DigicielFull/force-app/main/default/objects/Account/fields/RiskClass__c.field-meta.xml
<CustomField>
    <fullName>RiskClass__c</fullName>
    <label>Risk class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Très faible</fullName>
            </value>
            <value>
                <fullName>Faible</fullName>
            </value>
            <value>
                <fullName>Moyen</fullName>
            </value>
            <value>
                <fullName>Fort</fullName>
            </value>
            <value>
                <fullName>Très fort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>