DigicielFull/force-app/main/default/objects/Account/fields/Roaming__c.field-meta.xml
<CustomField>
    <fullName>Roaming__c</fullName>
    <label>Roaming</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Restricted Roaming</fullName>
            </value>
            <value>
                <fullName>Universal Roaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>