DigicielFull/force-app/main/default/objects/Account/fields/salesrep_Fax__c.field-meta.xml
<CustomField>
    <fullName>salesrep_Fax__c</fullName>
    <label>Sales Rep Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>