DigicielFull/force-app/main/default/objects/Account/fields/Security_Answer__c.field-meta.xml
<CustomField>
    <fullName>Security_Answer__c</fullName>
    <label>Security Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>