DigicielFull/force-app/main/default/objects/Account/fields/Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Service_Manager__c</fullName>
    <label>Service Manager</label>
    <length>40</length>
    <type>Text</type>
</CustomField>