DigicielFull/force-app/main/default/objects/Account/fields/SIM_Registered__c.field-meta.xml
<CustomField>
    <fullName>SIM_Registered__c</fullName>
    <label>SIM Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>