DigicielFull/force-app/main/default/objects/Account/fields/Specialterms__c.field-meta.xml
<CustomField>
    <fullName>Specialterms__c</fullName>
    <label>Special terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Règlement des FAS à la commande</fullName>
            </value>
            <value>
                <fullName>Avance à la commande</fullName>
            </value>
            <value>
                <fullName>Montant d’encours maximum</fullName>
            </value>
            <value>
                <fullName>Sans condition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>